Optimize assignments view * Refactor the visible_assignments_for_course query to start with the Collaboration object, taking advantage of the new GenericRelation to create a more readable query. * Avoid the "can_read" manual permissions test for this view. The complexity there deals with viewing peer work. In this view, we just care about viewing your own work. * Break apart the templates to make these views more readable and less fractured by conditional statements

--- a/mediathread/templates/projects/assignment_list.html
+++ b/mediathread/templates/projects/assignment_list.html
@@ -1,5 +1,5 @@
 {% extends "base_new.html" %}
-{% load coursetags static user_projects %}
+{% load coursetags static %}
 
 {% block title %}
 Assignments
@@ -62,139 +62,21 @@ Assignments
                     <input type="hidden" name="direction" value="{{direction}}">
                     <input type="hidden" name="page" value="{{page_obj.number}}">
                 </form>
-                <div class="row">
-                    <div class="col-12">
-                        {% if object_list.exists %}
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-striped w-100 tablesorter">
-                                    <thead class="thead-darkgray">
-                                        <th data-sort-by="due_date"
-                                            class="sortable {% if sortby == 'due_date' %}{{direction}}{% endif %}">
-                                            Due Date
-                                        </th>
-                                        <th data-sort-by="title"
-                                            class="sortable {% if sortby == 'title' %}{{direction}}{% endif %}">
-                                            Title
-                                        </th>
-                                        <th>
-                                            Status
-                                        </th>
-                                        <th>
-                                            Action
-                                        </th>
-                                        {% if role_in_course != 'student' %}
-                                            <th>
-                                                Responses
-                                            </th>
-                                            <th data-sort-by="full_name"
-                                                class="sortable {% if sortby == 'full_name' %}{{direction}}{% endif %}">
-                                                Authors
-                                            </th>
-                                        {% endif %}
-                                        <th data-sort-by="project_type"
-                                            class="sortable {% if sortby == 'project_type' %}{{direction}}{% endif %}">
-                                            Type
-                                        </th>
-                                        <th data-sort-by="modified"
-                                            class="sortable {% if sortby == 'modified' %}{{direction}}{% endif %}">
-                                            Last Updated
-                                        </th>
-                                    </thead>
-                                    <tbody>
-                                    {% for object in object_list %}
-                                        {% with responses=object|assignment_responses:request %}
-                                        {% filter_responses request.user responses as response %}
-                                        <tr>
-                                            <td>
-                                                {% if object.due_date %}
-                                                    {{object.due_date|date:"n/j/y"}}<br />
-                                                {% endif %}
-                                            </td>
-                                            <td>
-                                                <div>
-                                                    {{object.title}}
-                                                </div>
-                                            </td>
-                                            <td>
-                                                {% if role_in_course == "student" %}
-                                                    {% if response %}
-                                                        {% if response.is_submitted %}
-                                                            <div>Submitted {{response.date_submitted|date:"n/j/y g:iA"}}</div>
-                                                            <div>{{response.visibility_short}}</div>
-                                                        {% else %}
-                                                            {{response.visibility_short}}
-                                                        {% endif %}
-                                                    {% endif %}
-                                                {% else %}
-                                                    {{object.visibility_short}}
-                                                {% endif %}
-                                            </td>
-                                            <td>
-                                                {% if role_in_course == "student" %}
-                                                    {% if not response %}
-                                                        <form action="{% url 'project-create' request.course.id %}" method="post">
-                                                            <input type="hidden" name="parent" value="{{object.id}}">
-                                                            <input type="hidden" name="project_type" value="composition">
-                                                            <input type="hidden" name="title" value="My Response">
-                                                            <button class="btn btn-sm btn-primary btn-block" type="submit">Add Response</button>
-                                                        </form>
-                                                    {% else %}{% if response.feedback_discussion %}
-                                                        <a class="btn btn-sm btn-primary btn-block"
-                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
-                                                            View Feedback
-                                                        </a>
-                                                    {% else %}{% if response.is_submitted %}
-                                                        <a class="btn btn-sm btn-secondary btn-block"
-                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
-                                                            View Response
-                                                        </a>
-                                                    {% else %}
-                                                        <a class="btn btn-sm btn-primary btn-block"
-                                                            href="{% url 'project-workspace' request.course.id response.id %}" title="{{response.title}}">
-                                                            Edit Response
-                                                        </a>
-                                                    {% endif %}{% endif %}{% endif %}
-                                                {% else %}
-                                                    <a class="btn btn-sm btn-primary btn-block"
-                                                        href="{% url 'project-workspace' request.course.id object.id %}" title="{{object.title}}">
-                                                        View
-                                                    </a>
-                                                {% endif %}
-                                            </td>
-                                            {% if role_in_course != "student" %}
-                                                <td class="text-center">
-                                                    {% if role_in_course != "student" %}
-                                                        {{responses|length}} / {{request.course.students|length}}
-                                                    {% endif %}
-                                                </td>
-                                                <td>
-                                                    {{object.attribution}}
-                                                </td>
-                                            {% endif %}
-                                            <td>
-                                                {{object.description}}
-                                            </td>
-                                            <td>
-                                                {% if role_in_course == "student" %}
-                                                    {% if response %}
-                                                    {{response.modified|date:"n/j/y g:iA"}}
-                                                {% endif %}
-                                                {% else %}
-                                                    {{object.modified}}
-                                                {% endif %}
-                                            </td>
-                                        </tr>
-                                        {% endwith %}
-                                    {% empty %}
-                                        No projects found
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        {% else %}
-                        {% endif %}
+                {% if object_list.exists %}
+                    <div class="row">
+                        <div class="col-12">
+                            {% if role_in_course == 'student' %}
+                                {% include 'projects/assignment_table_student.html' %}
+                            {% else %}
+                                {% include 'projects/assignment_table_faculty.html' %}
+                            {% endif %}
+                        </div>
                     </div>
-                </div>
+                {% else %}
+                    <div class="text-center w-100">
+                        <h4>You have no assignments yet.</h4>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
