--- a/mediathread/templates/projects/composition_assignment.html
+++ b/mediathread/templates/projects/composition_assignment.html
@@ -58,11 +58,15 @@
     {% with active='assignments' %}
         {% include 'main/three_section_tabs.html' %}
     {% endwith %}
-
-    <table id="sliding-content-container">
-        <tr id="sliding-content-row" class="sliding-content-row">
-            <td id="sliding-content-last-column" class="filler"></td>
-        </tr>
-    </table>
+    <div class="tab-content">
+        <div role="tabpanel">
+            <div id="project-workspace" class="row">
+                <div id="project-container" class="col-md-12">
+                </div>
+            </div>
+            <div id="asset-container" class="col-md-12">
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
