--- a/media/templates/asset_quick_edit.mustache
+++ b/media/templates/asset_quick_edit.mustache
@@ -1,4 +1,5 @@
-    <td class="panel-container open" style="display: none">
+<div class="row">
+    <div class="col" style="display: none">
         <div id="asset-workspace-panel-container" class="mediathread-panel asset-workspace-dialog">
             <table class="panel-subcontainer">
                 <tr class="asset-workspace-content-row">
@@ -25,4 +26,6 @@
                 </tr>
             </table>
         </div>
+    </div>
+</div>
     </td>
